--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy:github": "nuxt generate --preset github_pages && gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.4",
@@ -16,6 +17,7 @@
     "@pinia/nuxt": "0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
     "@primevue/themes": "^4.2.5",
+    "gh-pages": "^6.3.0",
     "nuxt": "^3.14.1592",
     "nuxt-svgo": "4.0.9",
     "nuxt-time": "1.0.3",
@@ -26,6 +28,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/kit": "^3.15.1",
     "@vue/language-plugin-pug": "^2.1.10",
     "pug": "^3.0.3",
     "sass": "^1.83.0"
