--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           node-version: "20"
       # Pick your own package manager and build script
-      - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - run: deno install
+      - run: deno run -A build:github
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
