--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup deno
         uses: denolib/setup-deno@v2
         with:
-          deno-version: v1.7.0
+          deno-version: v2.1.4
 
       - name: Build gh-pages
         run: |
@@ -27,4 +27,4 @@ jobs:
         with:
           root: residence_test
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./.output
