--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "build:github": "nuxt generate --preset github_pages",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "generate:github": "nuxt generate --preset github_pages",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
