--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Build step
         run: deno run -A generate:github
         env:
-          NUXT_APP_BASE_URL: ashimriat.github.io/residence_test
-          NITRO_PRESET: github_pages
+          # NUXT_APP_BASE_URL: residence_test
       - name: Upload artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
