--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "generate:github": "nuxt generate --preset github_pages",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt generate --preset github_pages && gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.4",
@@ -17,6 +17,7 @@
     "@pinia/nuxt": "0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
     "@primevue/themes": "^4.2.5",
+    "gh-pages": "^6.3.0",
     "nuxt": "^3.14.1592",
     "nuxt-svgo": "4.0.9",
     "nuxt-time": "1.0.3",
