--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "nuxt-time": "1.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
-    "telegraf": "^4.16.3",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/kit": "^3.15.1",
+    "@types/telegram-web-app": "^7.10.1",
     "@vue/language-plugin-pug": "^2.1.10",
     "pug": "^3.0.3",
     "sass": "^1.83.0"
