--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "lint:code": "eslint .",
+    "lint:styles": "stylelint .",
     "deploy:github": "nuxt generate --preset github_pages && gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.4",
     "@morev/v-bem-transformer": "1.2.5",
+    "@nuxt/eslint": "^1.0.0",
     "@nuxtjs/device": "3.2.4",
     "@pinia/nuxt": "0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "gh-pages": "^6.3.0",
-    "nuxt": "^3.14.1592",
+    "nuxt": "^3.15.4",
     "nuxt-svgo": "4.0.9",
     "nuxt-time": "1.0.3",
     "primeicons": "^7.0.0",
@@ -27,10 +30,36 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxt/kit": "^3.15.1",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.3.0",
+    "@nuxt/eslint": "^1.0.0",
+    "@nuxt/kit": "^3.15.4",
+    "@stylistic/eslint-plugin": "^2.1.0",
     "@types/telegram-web-app": "^7.10.1",
+    "@types/eslint": "^8.56.10",
+    "@typescript-eslint/parser": "^7.10.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/language-plugin-pug": "^2.1.10",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-compat": "^5.0.0-2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.7.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-vue-pug": "^0.6.2",
     "pug": "^3.0.3",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "stylelint": "^16.5.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-no-unsupported-browser-features": "^8.0.1",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.3.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^7.10.0",
+    "vue-eslint-parser": "^9.4.2"
   }
 }
