--- a/package.json
+++ b/package.json
@@ -15,51 +15,42 @@
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.4",
     "@morev/v-bem-transformer": "1.2.5",
-    "@nuxt/eslint": "^1.0.0",
     "@nuxtjs/device": "3.2.4",
     "@pinia/nuxt": "0.9.0",
-    "@primevue/nuxt-module": "^4.2.5",
+    "@primevue/forms": "^4.3.2",
+    "@primevue/nuxt-module": "^4.3.2",
     "@primevue/themes": "^4.2.5",
-    "gh-pages": "^6.3.0",
-    "nuxt": "^3.15.4",
+    "@telegram-apps/sdk-vue": "^2.0.12",
+    "nuxt": "^3.16.0",
     "nuxt-svgo": "4.0.9",
     "nuxt-time": "1.0.3",
     "primeicons": "^7.0.0",
-    "primevue": "^4.2.5",
-    "vue": "latest",
-    "vue-router": "latest"
+    "primevue": "^4.3.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.3.0",
-    "@nuxt/eslint": "^1.0.0",
-    "@nuxt/kit": "^3.15.4",
-    "@stylistic/eslint-plugin": "^2.1.0",
-    "@types/telegram-web-app": "^7.10.1",
-    "@types/eslint": "^8.56.10",
-    "@typescript-eslint/parser": "^7.10.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/language-plugin-pug": "^2.1.10",
-    "eslint": "^9.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-compat": "^5.0.0-2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.7.0",
-    "eslint-plugin-vue": "^9.26.0",
+    "@nuxt/eslint": "^1.2.0",
+    "@nuxt/kit": "^3.16.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@vue/language-plugin-pug": "^3.0.0-alpha.2",
+    "deepmerge-ts": "^7.1.5",
+    "eslint": "^9.22.0",
+    "eslint-import-resolver-typescript": "^4.1.1",
+    "eslint-plugin-compat": "^6.0.2",
     "eslint-plugin-vue-pug": "^0.6.2",
+    "gh-pages": "^6.3.0",
     "pug": "^3.0.3",
-    "sass": "^1.83.0",
-    "stylelint": "^16.5.0",
-    "stylelint-config-recess-order": "^5.0.1",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-no-unsupported-browser-features": "^8.0.1",
+    "sass": "^1.85.1",
+    "stylelint": "^16.16.0",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-no-unsupported-browser-features": "^8.0.4",
     "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.3.0",
+    "stylelint-scss": "^6.11.1",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^7.10.0",
-    "vue-eslint-parser": "^9.4.2"
+    "typescript-eslint": "^8.26.1"
   }
 }
